<resources>
    <string name="app_name">Github User</string>
    <string name="name_of_user" translatable="false">name of user</string>
    <string name="following">following :</string>
    <string name="followers">followers :</string>
    <string name="language_setting">Language Setting</string>
    <string name="reminder_setting">Reminder Setting</string>
    <string name="search">Search</string>
    <string name="username" translatable="false">username</string>
    <string name="hint_search_user" translatable="false">Dicoding Indonesia</string>
    <string name="company">Company :</string>
    <string name="location">Location :</string>
    <string-array name="menu_follow">
        <item>Followers</item>
        <item>Following</item>
    </string-array>
    <string name="title_activity_apps_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="notification_header">Notification</string>

    <!-- Daily Notification -->
    <string name="daily_key" translatable="false">daily</string>
    <string name="daily_title">Daily Notification</string>
    <string name="daily_notification_text">don\'t forget to see the latest information in our application</string>
    <string name="attachment_summary_on">Automatic notification will be given at 9 am</string>
    <string name="attachment_summary_off">Notifications off</string>
    <string name="favorite_users">Favorite Users</string>
</resources>
