<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerHorizontal="false"
    android:layout_centerVertical="false"
    android:padding="10dp"
    tools:context=".MainActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="20dp"
        android:layout_toLeftOf="@id/btn_search"
        android:hint="@string/username"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        tools:ignore="RtlHardcoded">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_search_users"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_search_user" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/textField"
        android:layout_alignBottom="@id/textField"
        android:layout_alignParentRight="true"
        android:text="@string/search"
        tools:ignore="RtlHardcoded" />

    <ProgressBar
        android:id="@+id/loading_view"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/github_users_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/textField"
        tools:visibility="visible">

    </androidx.recyclerview.widget.RecyclerView>
</RelativeLayout>